# chunk-locker

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: test.yml
src/: chunker.rs  compressor.rs  config.rs  db.rs  encryptor.rs  hasher.rs  main.rs  memory.rs  signer.rs  store.rs
src/chunker/: fast_cdc.rs  mod.rs
src/chunker/fast_cdc/: chunking.rs  consts.rs  mod.rs  tests.rs
src/db/: async_db.rs  mod.rs  sqlite.rs
src/db/sqlite/: mod.rs
src/db/sqlite/migrations/: 00001.sql
src/store/: s3.rs
test/fixtures/: config.toml
