[package]
name = "chunk-locker"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", default-features = false, features = ["full", "parking_lot"] }
itertools = "0.10"
log = "0.4"
async-trait = "0.1"
eyre = "0.6"
color-eyre = "0.6"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
bytes = "*"
dotenv = "0.15"
reqwest = { version = "0.11.4", features = ["stream"] }

[dev-dependencies]
