[package]
name = "chunk-locker"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
aws-config = "0.51"
aws-sdk-s3 = "0.21"
bitvec = "1.0"
color-eyre = "0.6"
dotenv = "0.15"
eyre = "0.6"
futures = "0.3"
itertools = "0.10"
log = "0.4"
once_cell = "1.16"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.21", default-features = false, features = ["full", "parking_lot"] }
tokio-stream = "0.1"
toml = "0.5"

# Imported from aws-sdk-s3
bytes = "*"

[dev-dependencies]
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
md-5 = "0.10"
