[package]
name = "chunk-locker"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", default-features = false, features = ["full", "parking_lot"] }
itertools = "0.10"
log = "0.4"
async-trait = "0.1"
eyre = "0.6"
color-eyre = "0.6"
aws-config = "0.51"
aws-sdk-s3 = "0.21"
# Imported from aws-sdk-s3
bytes = "*"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
once_cell = "1.16"
rusqlite = { version = "0.28", features = ["bundled"] }

[dev-dependencies]
